# Informatica-3

./: README.md
commit-primero/: CMakeLists.txt  LZ78.cpp  Lz78.h  RLE.cpp  RLE.h  Rotacion.cpp  Rotacion.h  XOR.cpp  XOR.h  archivos.cpp  archivos.h  main.cpp
